...
    <string name="youtube_video_id">d9ZrzAQRyg8</string>

    <string name="menu_title">Menu</string>

    <!-- Landing page strings -->
    <string name="newcastle_logo">Newcastle University Logo</string>
    <string name="welcome_text">Welcome!</string>
    <string name="open_day_button">Open Day</string>
    <string name="post_app_day_button">Post Application Visit Day</string>

    <!-- FAQ strings -->
    <string name="faqTitle">Frequently Asked Questions</string>

    <string name="question1">Is there disabled access to the building?</string>
    <string name="answer1">Yes, the entrances are wheelchair accessible and there is lift access to the first four floors of the building.</string>

    <string name="question2">Where are the medical centers located near the USB?</string>
    <string name="answer2">There are first aid trained staff on premises to assist in medical needs as well as Newcastle Hospital close by if further medical help is required.</string>

    <string name="question3">Is food available within the USB?</string>
    <string name="answer3">There is food available within the building\'s cafeteria on the ground floor.</string>

    <string name="question4">What nearby transport links are available?</string>
    <string name="answer4">The closest bus and metro stations to the USB are just outside St. James\' Park, with the bus station on Barrack Road and a metro stop at the football grounds. The USB is also located just a 10 minute walk from the train station.</string>

    <string name="question5">Where are toilets located?</string>
    <string name="answer5">Toilets are located on every floor in the building, disabled toilets are available on all floors with disabled access.</string>

    <!-- Open Day Strings -->
    <string name="open_Day_Info">The open days here at Newcastle are a great way to explore and experience the Newcastle university campus directly.
        During Summer and Autumn annually the university hosts the open days for students interested in seeking a higher education after school.\n\n
        On the day you’ll be provided with a number of activities and aimed to help you learn more about the USB,
...
    <string name="floor_plan_picture">Picture of the Floor Plan</string>
    <string name="floor_info">Information relative to the floor being currently viewed</string>
    <string name="next_step">Next Step</string>
    <string name="playbtn">Play Video</string>

    <!-- Self guided tour menu -->
    <string name="self_guided_title">Self Guided Tour</string>
    <string name="preset_tour_button">Follow a pre-set walking tour</string>
    <string name="own_pace_button">Discover at your own pace</string>

    <!--Text For Pre-Config Tour-->

    <!-- Titles -->
...
    <string name="floor3_image_desc">floor plan of floor three</string>
    <string name="floor4_image_desc">floor plan of floor four</string>
    <string name="floor5_image_desc">floor plan of floor five</string>
    <string name="floor6_image_desc">floor plan of floor six</string>

    <!-- Google Maps Directions Strings -->
    <string name="directions_title">Directions to the USB</string>
    <string name="directions_from_main_campus">Directions from Main Campus</string>
    <string name="directions_from_haymarket">Directions from Haymarket</string>
    <string name="directions_from_central_station">Directions from Central Station</string>
    <string name="directions_from_eldon_square">Directions from Eldon Square</string>

    <string name="main_campus_text">Main Campus</string>
...
    <string name="university_stops">University</string>
    <string name="accomodation_stops">Accommodation</string>

    <array name="pre_config_tour"></array>

    <!-- Nav Bar Strings -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>

