...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center_horizontal"/>

        <Button
            android:id="@+id/presetButton"
            style="@style/ButtonStyle"
            android:layout_marginTop="44dp"
            android:onClick="selfTourClick"
            android:text="@string/preset_tour_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleText" />

        <Button
            android:id="@+id/ownPaceButton"
            style="@style/ButtonStyle"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="50dp"
            android:onClick="selfTourClick"
            android:text="@string/own_pace_button"
            app:layout_constraintBottom_toBottomOf="parent"
...
